# philBackground

./: .gitignore  Cargo.toml
blockchain/: README.md  hardhat.config.js  package-lock.json  package.json
blockchain/contracts/: zkBgNFT.sol  zkBgNTF.sol
blockchain/scripts/: deploy.js
src/: lib.rs  main.rs
src/circuits/simple_spirals/: mod.rs
static/: spiral_verifier.html  spiral_visualizer_hardhat.html
