[package]
name = "zkbg"
version = "0.1.0"
edition = "2021"

[dependencies]
# Halo2 for ZK proofs
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
ff = "0.13"
group = "0.13"
pasta_curves = "0.5"

# Web server
tokio = { version = "1", features = ["full"] }
warp = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client for gas APIs
reqwest = { version = "0.11", features = ["json"] }

# Error handling
anyhow = "1.0"

# Utilities
rand = "0.8"